--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,24 @@
          });
        }
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+    <script>
+      var firebaseConfig = {
+        apiKey: "...",
+        authDomain: "[YOUR_PROJECT].firebaseapp.com",
+        databaseURL: "https://[YOUR_PROJECT].firebaseio.com",
+        projectId: "[YOUR_PROJECT]",
+        storageBucket: "[YOUR_PROJECT].appspot.com",
+        messagingSenderId: "...",
+        appId: "1:...:web:...",
+        measurementId: "G-...",
+      };
+
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
     <script defer src="main.dart.js" type="application/javascript"></script>
 </head>
 <body>
