--- a/web/index.html
+++ b/web/index.html
@@ -44,21 +44,24 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
     <script>
+
       var firebaseConfig = {
-        apiKey: "...",
-        authDomain: "[YOUR_PROJECT].firebaseapp.com",
+        apiKey: "AIzaSyCT-0uxx4eLy-7g1Ko6QsYW2ySC_flHgfc",
+        authDomain: "ancorio.firebaseapp.com",
         databaseURL: "https://[YOUR_PROJECT].firebaseio.com",
-        projectId: "[YOUR_PROJECT]",
-        storageBucket: "[YOUR_PROJECT].appspot.com",
-        messagingSenderId: "...",
-        appId: "1:...:web:...",
-        measurementId: "G-...",
+        projectId: "ancorio",
+        storageBucket: "ancorio.appspot.com",
+        messagingSenderId: "426517751218",
+        appId: "1:426517751218:web:c65470849821e13ecd30ab",
+        measurementId: "G-KSKSSD8ZLG",
       };
 
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
     <script defer src="main.dart.js" type="application/javascript"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="426517751218-vbss1tue09gj94o7equrk3h1lkot25ue.apps.googleusercontent.com">
 </head>
 <body>
 <!-- This script installs service_worker.js to provide PWA functionality to
